# cliptube

./: .gitignore  README.md  Session.vim  TODO.md  cliptube.cfg  cliptube.desktop  cliptube.service  pyproject.toml  python-cliptube.service  ytwatch.service
.githooks/: pre-commit
configs/: cliptube-dirwatch.desktop  cliptube.cfg  cliptube.desktop  cliptube.service  dirwatch.service  iplayer  yt-dlp
scripts/: fix-iplayer-names.py  install-cliptube.sh  install-config.sh  install-dirwatch.sh  update-versions.sh  use_get_iplayer.sh
src/cliptube/: __init__.py  config.py  ct.py  files.py  history.py  localqueue.py  notify.py  orphans.py  parcellite.py  shell.py  watchdir.py  wclipboard.py
tests/: __init__.py  test_cliptube.py  test_config.py  test_files.py  test_localqueue.py  test_notify.py  test_shell.py  test_watchdir.py  test_wclipboard.py
