[tool.poetry]
name = "cliptube"
version = "1.4.11"
description = "tool to download youtube videos from the clipboard."
authors = ["ccdale <chris.charles.allison+cliptube@gmail.com>"]
readme = "README.md"
packages = [{include = "cliptube", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
ccalogging = "*"
fabric = "*"
inotify-simple = "^1.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
orphans = "cliptube.orphans:findOrphans"
# gcbwatch = "cliptube.wclipboard:watchGnomeClipboard"
cliptube = "cliptube.wclipboard:watchparcellite"
dirwatch = "cliptube.watchdir:dirWatch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
