[project]
name = "cliptube"
version = "2.0.31"
description = "tool to download youtube videos from the clipboard."
authors = [{ name = "ccdale", email = "chris.charles.allison+cliptube@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ccalogging",
    "iplayer",
]

[tool.uv.sources]
iplayer = { path = "../iplayer" }

[project.scripts]
cliptube = "cliptube.wclipboard:watchGnomeClipboard"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
preview = true

[tool.hatch.build.targets.sdist]
include = ["src/cliptube"]

[tool.hatch.build.targets.wheel]
include = ["src/cliptube"]

[tool.hatch.build.targets.wheel.sources]
"src/cliptube" = "cliptube"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
